[tool.poetry]
name = "HTP-tools-cif2x"
version = "1.0-dev"
description = "High-ThroughtPut calculation tools"
authors = ["HTP-tools developers <htp-tools-dev@issp.u-tokyo.ac.jp>"]
license = "GPL-3.0-or-later"

readme = "README.md"
repository = "https://github.com/issp-center-dev/HTP-tools-dev"

packages = [
  { include = "cif2x", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = ">=1.20"
pandas = ">=1.4"
pymatgen = ">=2019.12.3"
f90nml = "^1.4"
qe-tools = "^1.1"

[tool.poetry.extras]

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
cif2x = "cif2x.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
