[tool.poetry]
name = "htp-tools-getcif"
version = "1.0-beta"
description = "High-ThroughtPut calculation tools"
authors = ["HTP-tools developers <htp-tools-dev@issp.u-tokyo.ac.jp>"]
license = "GPL-3.0-or-later"

readme = "README.md"
repository = "https://github.com/issp-center-dev/HTP-tools-dev"

packages = [
  { include = "getcif", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
pymatgen = ">=2019.12.3"
mp_api = "*"
phonopy = "*"
"ruamel.yaml" = "*"

[tool.poetry.extras]

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
getcif = "getcif.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
